--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build Image
 
 on:
   workflow_call:
@@ -7,40 +7,41 @@ on:
         required: true
       AWS_SECRET_ACCESS_KEY:
         required: true
-      ECR_REPO:
-        required: true
     outputs:
       image_tag:
+        description: "Docker image tag"
         value: ${{ jobs.build.outputs.image_tag }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     outputs:
-      image_tag: ${{ steps.meta.outputs.image_tag }}
+      image_tag: ${{ steps.tag.outputs.image_tag }}
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set image tag
+        id: tag
+        run: |
+          TAG=$(git rev-parse --short HEAD)
+          echo "image_tag=$TAG" >> $GITHUB_OUTPUT
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1
+          aws-region: us-east-1
 
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Set image tag
-        id: meta
-        run: echo "image_tag=${GITHUB_SHA}" >> $GITHUB_OUTPUT
-
-      - name: Build & Push image
+      - name: Build and push Docker image
         run: |
-          docker build -t myapp:${{ steps.meta.outputs.image_tag }} .
-          docker tag myapp:${{ steps.meta.outputs.image_tag }} \
-            ${{ secrets.ECR_REPO }}:${{ steps.meta.outputs.image_tag }}
-          docker push ${{ secrets.ECR_REPO }}:${{ steps.meta.outputs.image_tag }}
+          docker build -t my-app:${{ steps.tag.outputs.image_tag }} .
+          docker tag my-app:${{ steps.tag.outputs.image_tag }} \
+            $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/my-app:${{ steps.tag.outputs.image_tag }}
+          docker push \
+            $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/my-app:${{ steps.tag.outputs.image_tag }}
