--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: Deploy to EKS
 
 on:
   workflow_call:
@@ -9,6 +9,11 @@ on:
       image_tag:
         required: true
         type: string
+    secrets:
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
 
 jobs:
   deploy:
@@ -16,7 +21,7 @@ jobs:
     environment: ${{ inputs.environment }}
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Configure AWS credentials
@@ -24,20 +29,16 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1
+          aws-region: us-east-1
 
       - name: Update kubeconfig
         run: |
           aws eks update-kubeconfig \
-            --name ${{ secrets.EKS_CLUSTER_NAME }} \
-            --region ap-south-1
+            --region us-east-1 \
+            --name my-eks-cluster
 
-      - name: Deploy to EKS - ${{ inputs.environment }}
+      - name: Deploy to Kubernetes
         run: |
-          kubectl set image deployment/myapp \
-            myapp=${{ secrets.ECR_REPO }}:${{ inputs.image_tag }} \
+          kubectl set image deployment/my-app \
+            my-app=$AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/my-app:${{ inputs.image_tag }} \
             -n ${{ inputs.environment }}
-
-      - name: Verify rollout
-        run: |
-          kubectl rollout status deployment/myapp -n ${{ inputs.environment }}
