--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Image
+name: Build Docker Image
 
 on:
   workflow_call:
@@ -7,9 +7,10 @@ on:
         required: true
       AWS_SECRET_ACCESS_KEY:
         required: true
+      AWS_ACCOUNT_ID:
+        required: true
     outputs:
       image_tag:
-        description: "Docker image tag"
         value: ${{ jobs.build.outputs.image_tag }}
 
 jobs:
@@ -19,10 +20,10 @@ jobs:
       image_tag: ${{ steps.tag.outputs.image_tag }}
 
     steps:
-      - name: Checkout code
+      - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Set image tag
+      - name: Generate image tag
         id: tag
         run: |
           TAG=$(git rev-parse --short HEAD)
@@ -38,10 +39,10 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build and push Docker image
+      - name: Build and push image
         run: |
           docker build -t my-app:${{ steps.tag.outputs.image_tag }} .
           docker tag my-app:${{ steps.tag.outputs.image_tag }} \
-            $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/my-app:${{ steps.tag.outputs.image_tag }}
+            ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/my-app:${{ steps.tag.outputs.image_tag }}
           docker push \
-            $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/my-app:${{ steps.tag.outputs.image_tag }}
+            ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/my-app:${{ steps.tag.outputs.image_tag }}
