--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ on:
         required: true
       AWS_SECRET_ACCESS_KEY:
         required: true
+      AWS_ACCOUNT_ID:
+        required: true
 
 jobs:
   deploy:
@@ -21,7 +23,7 @@ jobs:
     environment: ${{ inputs.environment }}
 
     steps:
-      - name: Checkout code
+      - name: Checkout source
         uses: actions/checkout@v4
 
       - name: Configure AWS credentials
@@ -37,8 +39,8 @@ jobs:
             --region us-east-1 \
             --name my-eks-cluster
 
-      - name: Deploy to Kubernetes
+      - name: Deploy application
         run: |
           kubectl set image deployment/my-app \
-            my-app=$AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/my-app:${{ inputs.image_tag }} \
+            my-app=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/my-app:${{ inputs.image_tag }} \
             -n ${{ inputs.environment }}
