--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,36 +3,35 @@ name: Build Docker Image
 on:
   workflow_call:
     inputs:
-      aws_region:
+      environment:
         required: true
         type: string
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to AWS ECR
-        uses: aws-actions/amazon-ecr-login@v2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          region: ${{ inputs.aws_region }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
+
+      - name: Login to ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
       - name: Build Docker image
         run: |
-          IMAGE_URI="${{ secrets.ECR_REPO }}:latest"
+          IMAGE_URI="${{ secrets.ECR_REGISTRY }}/my-app:${{ github.sha }}"
           docker build -t $IMAGE_URI .
-          echo "Built $IMAGE_URI"
+          echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
 
       - name: Push Docker image to ECR
         run: |
-          IMAGE_URI="${{ secrets.ECR_REPO }}:latest"
           docker push $IMAGE_URI
-
-      - name: Output image URI
-        id: image
-        run: echo "image_uri=${{ secrets.ECR_REPO }}:latest" >> $GITHUB_OUTPUT
