--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,38 +8,42 @@ on:
         type: string
     outputs:
       IMAGE_URI:
-        description: "Built container image URI"
+        description: "ECR image URI"
         value: ${{ jobs.build.outputs.image_uri }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      image_uri: ${{ steps.build-image.outputs.image_uri }}
+      image_uri: ${{ steps.build.outputs.image_uri }}
 
     steps:
-      - name: Checkout code
+      - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Set image tag
-        id: vars
-        run: |
-          IMAGE_TAG=${{ inputs.environment }}-${GITHUB_SHA::7}
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-
-      # ---- Login to registry (example: GHCR) ----
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+      # ---- Configure AWS credentials (OIDC preferred) ----
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      # ---- Build & push image ----
-      - name: Build and push Docker image
-        id: build-image
+      # ---- Login to Amazon ECR ----
+      - name: Login to ECR
+        uses: aws-actions/amazon-ecr-login@v2
+
+      # ---- Build & push Docker image ----
+      - name: Build and push image
+        id: build
+        env:
+          ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+          ENVIRONMENT: ${{ inputs.environment }}
         run: |
-          IMAGE_URI=ghcr.io/${{ github.repository }}:${IMAGE_TAG}
+          IMAGE_TAG=${ENVIRONMENT}-${GITHUB_SHA::7}
+          IMAGE_URI=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
+
           echo "image_uri=$IMAGE_URI" >> $GITHUB_OUTPUT
