--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,7 +21,7 @@ jobs:
 
   deploy-qa:
     if: github.ref == 'refs/heads/main'
-    needs: qa
+    needs: dev
     uses: ./.github/workflows/deploy.yml
     with:
       environment: qa
