--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,21 +18,22 @@ jobs:
       image_uri: ${{ steps.build.outputs.image_uri }}
 
     steps:
-      - name: Checkout source
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # ---- Configure AWS credentials (OIDC preferred) ----
+      # ---- Configure AWS credentials (IAM User) ----
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # ---- Login to Amazon ECR ----
-      - name: Login to ECR
+      # ---- Login to ECR ----
+      - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      # ---- Build & push Docker image ----
+      # ---- Build & Push Image ----
       - name: Build and push image
         id: build
         env:
